2019-11-13  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed gardening. Add expectations for tests using strictFileInteractability

        File upload is not yet supported.

        * TestExpectations.json:

2019-11-13  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed gardening. Update expectations of fullscreen tests.

        They are failing in the bots, but passing locally and with wpt.

        * TestExpectations.json:

2019-11-12  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update W3C WebDriver imported tests.

        * imported/w3c/importer.json:
        * imported/w3c/tools/webdriver/README.md:
        * imported/w3c/tools/webdriver/webdriver/client.py:
        * imported/w3c/tools/webdriver/webdriver/transport.py:
        * imported/w3c/tools/wptrunner:
        * imported/w3c/webdriver/tests/accept_alert/accept.py:
        * imported/w3c/webdriver/tests/add_cookie/add.py:
        * imported/w3c/webdriver/tests/dismiss_alert/dismiss.py:
        * imported/w3c/webdriver/tests/element_clear/clear.py:
        * imported/w3c/webdriver/tests/element_click/bubbling.py:
        * imported/w3c/webdriver/tests/execute_async_script/collections.py:
        * imported/w3c/webdriver/tests/execute_async_script/promise.py: Added.
        * imported/w3c/webdriver/tests/execute_async_script/properties.py: Added.
        * imported/w3c/webdriver/tests/execute_script/collections.py:
        * imported/w3c/webdriver/tests/execute_script/execute.py:
        * imported/w3c/webdriver/tests/execute_script/promise.py:
        * imported/w3c/webdriver/tests/execute_script/properties.py: Added.
        * imported/w3c/webdriver/tests/find_element_from_element/find.py:
        * imported/w3c/webdriver/tests/get_alert_text/get.py:
        * imported/w3c/webdriver/tests/get_current_url/get.py:
        * imported/w3c/webdriver/tests/get_element_attribute/get.py:
        * imported/w3c/webdriver/tests/get_element_property/get.py: