@@ -1,5 +1,13 @@
 2019-11-13  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        Unreviewed gardening. Add expectations for execute script tests.
+
+        The ones checking the use of promises are failing.
+
+        * TestExpectations.json:
+
+2019-11-13  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         Unreviewed gardening. Add expectations for tests using strictFileInteractability
 
         File upload is not yet supported.
